<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="36dp"
    tools:context=".main.MainActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"
        />

    <TextView
        android:id="@+id/activity_main_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginBottom="4dp"
        />

    <Button
        android:id="@+id/first_button"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/main_activity_profile_button_text"
        />

    <Button
        android:id="@+id/second_button"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/main_activity_handler_button_text"
        />

    <Button
        android:id="@+id/third_button"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/main_activity_calculator_button_text"
        />

    <Button
        android:id="@+id/fourth_button"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/main_activity_logout_button_text"
        />

</androidx.appcompat.widget.LinearLayoutCompat>