<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/view_size_40x"
    tools:context=".main.MainActivity"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/activity_clicker_current_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_24x"
            android:textColor="@color/purple_300"
            android:visibility="gone"
            android:paddingBottom="@dimen/padding_8x"
            android:text="@string/profile_activity_level_progress_title_fmt"
            tools:visibility="visible"
            />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/activity_clicker_linear_progress_indicator"
            style="@style/LinearProgressStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:progress="20"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/activity_clicker_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:text="@string/clicker_activity_total_title_text"
            />

        <com.robinhood.ticker.TickerView
            android:id="@+id/activity_clicker_ticker_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/purple_200"
            android:paddingVertical="@dimen/padding_8x"
            app:ticker_defaultCharacterList="number"
            tools:text="123123"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        style="@style/DefaultButton"
        android:id="@+id/activity_clicker_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/clicker_activity_button_text"
        android:textAllCaps="false"
        />

</androidx.appcompat.widget.LinearLayoutCompat>